<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ResD3" Id="{ed53226c-c57f-470c-9cf2-f1ad111cdc5b}">
    <Declaration><![CDATA[TYPE ST_ResD3 :
STRUCT
	Node_Cntl_ID		:UINT;
	Node_Cntl_Present	:BYTE;	
	Node_Type			:BYTE;
	VehicleID			:UINT;
	ReqPos				:BYTE;
	ReportPos			:BYTE;
	Flags				:BYTE;
	CRC1				:BYTE;	    (* 1 byte*)
	CRC2				:BYTE;	    (* 1 byte*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>